@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.core.data.manager;
 
-import com.google.common.collect.ImmutableList;
 import java.io.File;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
@@ -134,7 +133,8 @@ public class BaseTableDataManagerAcquireSegmentTest {
             new SegmentMultiColTextIndexPreprocessThrottler(4, 8, true));
     TableDataManager tableDataManager = new OfflineTableDataManager();
     tableDataManager.init(instanceDataManagerConfig, mock(HelixManager.class), new SegmentLocks(), tableConfig, schema,
-        new SegmentReloadSemaphore(1), Executors.newSingleThreadExecutor(), null, null, segmentOperationsThrottler);
+        new SegmentReloadSemaphore(1), Executors.newSingleThreadExecutor(), null, null, segmentOperationsThrottler,
+        false);
     tableDataManager.start();
     Field segsMapField = BaseTableDataManager.class.getDeclaredField("_segmentDataManagerMap");
     segsMapField.setAccessible(true);
@@ -187,7 +187,7 @@ public class BaseTableDataManagerAcquireSegmentTest {
     // If a caller tries to acquire the deleted segment using acquireSegments, it will be returned in
     // notAcquiredSegments. The isSegmentDeletedRecently method should return true.
     List<String> notAcquiredSegments = new ArrayList<>();
-    tableDataManager.acquireSegments(ImmutableList.of(segmentName), notAcquiredSegments);
+    tableDataManager.acquireSegments(List.of(segmentName), notAcquiredSegments);
     Assert.assertEquals(notAcquiredSegments.size(), 1);
     Assert.assertTrue(tableDataManager.isSegmentDeletedRecently(segmentName));
 
